[gd_scene load_steps=13 format=2]

[ext_resource path="res://code/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://visuals/fonts/Adventurer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/buttons/main menu/newGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/buttons/main menu/continueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/buttons/main menu/optionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/buttons/main menu/exitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://visuals/main menu textures/mainScreen_art.png" type="Texture" id=7]
[ext_resource path="res://MenuMusic.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
    COLOR = vec4(UV.x, UV.y, 1.0, 0.5);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
margin_right = 340.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.160784, 0.0117647, 0.356863, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "StoryStuck"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 52.0
margin_right = 340.0
margin_bottom = 197.0
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 168.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="newGameButton" parent="Menu/CenterRow/buttons" instance=ExtResource( 3 )]
margin_top = 26.0
margin_right = 168.0
margin_bottom = 46.0
scene_to_load = "res://scenes/game/world.tscn"

[node name="continueButton" parent="Menu/CenterRow/buttons" instance=ExtResource( 4 )]
margin_top = 50.0
margin_right = 168.0
margin_bottom = 70.0

[node name="optionsButton" parent="Menu/CenterRow/buttons" instance=ExtResource( 5 )]
margin_top = 74.0
margin_right = 168.0
margin_bottom = 94.0

[node name="exitButton" parent="Menu/CenterRow/buttons" instance=ExtResource( 6 )]
margin_top = 98.0
margin_right = 168.0
margin_bottom = 118.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 172.0
margin_right = 340.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="menuArt" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 34.0
margin_top = 22.0
margin_right = 134.0
margin_bottom = 122.0
texture = ExtResource( 7 )

[node name="versionLabel" type="Label" parent="Menu"]
margin_top = 201.0
margin_right = 340.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Version 0.0.1
HouseFire Studios"

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.137255, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="pressed" from="Menu/CenterRow/buttons/exitButton" to="." method="_on_exitButton_pressed"]
